Update and rename welcome page.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Welcome Page</title>
   <link rel="icon" type="image/png" href="cat icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lexend:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="welcome page.css">
+  <link rel="stylesheet" href="style.css">
   <iframe src="music-player.html" style="position:fixed;top:-9999px;width:1px;height:1px;opacity:0;border:none;z-index:9999;" frameborder="0"></iframe>
   <script src="music-global.js"></script>
   
@@ -37,3 +37,4 @@
 </script>
 
 </html>
+
